# paniz

./: CONTRIBUTING.rst  README.md  pyproject.toml
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  installation.rst  modules.rst  paniz.rst  usage.ipynb
tests/: test_paniz.py
